--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <div id="wallet" class="wallet-box">Wallet: <span id="wallet-balance">0</span></div>
   </div>
   <script src="script.js"></script>
+  <script type='text/javascript' src='//pl23209233.highcpmgate.com/07/35/9b/07359b3397f7d2a1b964425e5e4d9c22.js'></script>
 </body>
 </html>
