--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <div class="tile" id="tile9"></div>
     </div>
     <button id="play-again">Play Again</button>
-    <div id="wallet" class="wallet-box">Wallet: <span id="wallet-balance">0</span></div>
+    <div id="wallet" class="wallet-box">Wallet: <span id="wallet-balance">0</span>
+       <button id="withdraw">Withdraw</button>
+    </div>
   </div>
   <script src="script.js"></script>
   
