--- a/withdraw.html
+++ b/withdraw.html
@@ -10,24 +10,24 @@
   <div class="container">
     <div class="option amazon">
       <div class="content">
-        <img src="C:\Users\s\Downloads\png-clipart-amazon-com-logo-brand-amazon-publishing-amazon-books-design-text-logo.png" alt="Amazon Logo">
+        <img src="C:\Users\s\Downloads\pngwing.com (1).png" alt="Amazon Logo">
         <div class="sub-options">
-          <button class="sub-option" data-amount="10">Get $10 Amazon Gift Card</button>
-          <button class="sub-option" data-amount="25">Get $25 Amazon Gift Card</button>
-          <button class="sub-option" data-amount="50">Get $50 Amazon Gift Card</button>
+          <button class="sub-option" data-amount="10">Get ₹10 Amazon Gift Card</button>
+          <button class="sub-option" data-amount="25">Get ₹25 Amazon Gift Card</button>
+          <button class="sub-option" data-amount="50">Get ₹50 Amazon Gift Card</button>
         </div>
       </div>
-    </div>
+    </div
     <div class="option flipkart">
       <div class="content">
-        <img src="png-transparent-flipkart-logo-thumbnail.png" alt="Flipkart Logo">
+        <img src="C:\Users\s\Downloads\pngwing.com.png" alt="Flipkart Logo">
         <div class="sub-options">
-          <button class="sub-option" data-amount="10">Get $10 Flipkart Gift Card</button>
-          <button class="sub-option" data-amount="25">Get $25 Flipkart Gift Card</button>
-          <button class="sub-option" data-amount="50">Get $50 Flipkart Gift Card</button>
+          <button class="sub-option" data-amount="10">Get ₹10 Flipkart Gift Card</button>
+          <button class="sub-option" data-amount="25">Get ₹25 Flipkart Gift Card</button>
+          <button class="sub-option" data-amount="50">Get ₹50 Flipkart Gift Card</button>
         </div>
       </div>
-    </div>
+    </div
   </div>
   <script>
     document.addEventListener('DOMContentLoaded', function() {
