--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <button id="play-again">Play Again</button>
     <div id="wallet" class="wallet-box">Wallet: <span id="wallet-balance">0</span>
        <button id="withdraw">Withdraw</button>
+       <button onclick="window.location.href='about game.html'" class="about-button">About Game</button>
     </div>
   </div>
   <script src="script.js"></script>
