--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
        <button onclick="window.location.href='about game.html'" class="about-button">About Game</button>
     </div>
   </div>
+  <div class = "footer" 
+    <a href="https://www.sigmatraffic.com?ref=256113">Free website hits</a></div>
   <script src="script.js"></script>
   
   <script async="async" data-cfasync="false" src="//pl23209164.highcpmgate.com/a05b9c9bfd1d8f828e1902b26e8b12c0/invoke.js"></script>
