--- a/about game.html
+++ b/about game.html
@@ -170,6 +170,7 @@
 	};
 </script>
 <script type="text/javascript" src="//www.topcreativeformat.com/af238aa002530fed94c4b2bc7dae73b9/invoke.js"></script>
+	<script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="182849"></script>
 </body>
 
 </html>
