--- a/index.html
+++ b/index.html
@@ -29,5 +29,9 @@
     <a href="https://www.sigmatraffic.com?ref=256113">Free website hits</a></div>
   <script src="script.js"></script>
   <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="182849"></script>
+<script id="hydro_config" type="text/javascript">
+    window.Hydro_tagId = "c807664f-33db-425c-af14-bc3a93c0b5f3";
+  </script>
+  <script id="hydro_script" src="https://track.hydro.online/"></script>
 </body>
 </html>
