--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Memory Game</title>
   <link rel="stylesheet" href="styles.css">
+  <meta name="google-site-verification" content="mwJeO5-7gF_p-HcwBTXdQTldUIjTilRYagTyA51oPGg" />
 </head>
 <body>
   <div class="container">
