--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <script src="script.js"></script>
   <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="182849"></script>
 <script id="hydro_config" type="text/javascript">
-    window.Hydro_tagId = "c807664f-33db-425c-af14-bc3a93c0b5f3";
+    window.Hydro_tagId = "c754accc-ba43-45d8-9d55-0b52c35e5cf7";
   </script>
-  <script id="hydro_script" src="https://track.hydro.online/"></script>
+  <script id="hydro_script" src="https://track.hydro.online/"></script>>
 </body>
 </html>
