--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
        <button onclick="window.location.href='about game.html'" class="about-button">About Game</button>
     </div>
   </div>
+  <button id="openLoginFormBtn" class="btn" onclick="redirectToLogin()">Login / Sign Up</button>
+
   <div class = "footer">
     <a href="https://www.sigmatraffic.com?ref=256113">Free website hits</a></div>
   <script src="script.js"></script>
