--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
        <button onclick="window.location.href='about game.html'" class="about-button">About Game</button>
     </div>
   </div>
-  <button onclick="window.location.herf='login.html'>Login / Sign Up</button>
+  <button onclick="window.location.href='login.html'>Login / Sign Up</button>
 
   <div class = "footer">
     <a href="https://www.sigmatraffic.com?ref=256113">Free website hits</a></div>
