--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB BEKS</title>
-    <link rel="stylesheet" href="LOGIN.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <div class="container right-panel-active">
