--- a/index.html
+++ b/index.html
@@ -35,6 +35,29 @@
 <script id="hydro_config" type="text/javascript">
     window.Hydro_tagId = "c754accc-ba43-45d8-9d55-0b52c35e5cf7";
   </script>
-  <script id="hydro_script" src="https://track.hydro.online/"></script>>
+  <script id="hydro_script" src="https://track.hydro.online/"></script>
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyCpwtSYxag-Sp0k2CWRqkoChkaVovuPwQQ",
+    authDomain: "treasure-tiles-beb7a.firebaseapp.com",
+    projectId: "treasure-tiles-beb7a",
+    storageBucket: "treasure-tiles-beb7a.appspot.com",
+    messagingSenderId: "901706185644",
+    appId: "1:901706185644:web:1d60d83de54f3cea4d9809",
+    measurementId: "G-5B8WKYPSKK"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
