--- a/login.html
+++ b/login.html
@@ -43,5 +43,28 @@
     </div>
 
     <script defer src="main.js"></script>
+    <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyCpwtSYxag-Sp0k2CWRqkoChkaVovuPwQQ",
+    authDomain: "treasure-tiles-beb7a.firebaseapp.com",
+    projectId: "treasure-tiles-beb7a",
+    storageBucket: "treasure-tiles-beb7a.appspot.com",
+    messagingSenderId: "901706185644",
+    appId: "1:901706185644:web:1d60d83de54f3cea4d9809",
+    measurementId: "G-5B8WKYPSKK"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
