--- a/about game.html
+++ b/about game.html
@@ -171,6 +171,29 @@
 </script>
 <script type="text/javascript" src="//www.topcreativeformat.com/af238aa002530fed94c4b2bc7dae73b9/invoke.js"></script>
 	<script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="182849"></script>
+	<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyCpwtSYxag-Sp0k2CWRqkoChkaVovuPwQQ",
+    authDomain: "treasure-tiles-beb7a.firebaseapp.com",
+    projectId: "treasure-tiles-beb7a",
+    storageBucket: "treasure-tiles-beb7a.appspot.com",
+    messagingSenderId: "901706185644",
+    appId: "1:901706185644:web:1d60d83de54f3cea4d9809",
+    measurementId: "G-5B8WKYPSKK"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 
 </html>
