--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -20,22 +20,23 @@
       <div class="tile" id="tile8"></div>
       <div class="tile" id="tile9"></div>
     </div>
-    <button id="play-again">Play Again</button>
+    <button id="play-again" class="btn">Play Again</button>
     <div id="wallet" class="wallet-box">Wallet: <span id="wallet-balance">0</span>
-       <button id="withdraw">Withdraw</button>
-       <button onclick="window.location.href='about game.html'" class="about-button">About Game</button>
+       <button id="withdraw" class="btn">Withdraw</button>
+       <button onclick="window.location.href='about game.html'" class="about-button btn">About Game</button>
+       <button onclick="window.location.href='login.html'" class="btn">Login / Sign Up</button>
     </div>
   </div>
-  <button onclick="window.location.href='login.html'">Login / Sign Up</button>
+ 
 
-  <div class = "footer">
-    <a href="https://www.sigmatraffic.com?ref=256113">Free website hits</a></div>
+  <div class="footer">
+    <a href="https://www.sigmatraffic.com?ref=256113">Free website hits</a>
+  </div>
   <script src="script.js"></script>
-  <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="182849"></script>
-<script id="hydro_config" type="text/javascript">
+  
+  <script id="hydro_config" type="text/javascript">
     window.Hydro_tagId = "c754accc-ba43-45d8-9d55-0b52c35e5cf7";
   </script>
   <script id="hydro_script" src="https://track.hydro.online/"></script>
- 
 </body>
 </html>
