--- a/withdraw.html
+++ b/withdraw.html
@@ -5,8 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gift Card Options</title>
   <link rel="stylesheet" href="style.css">
+  <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+  </script>
 </head>
 <body>
+  <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-4351253572981801">
+</amp-auto-ads>
   <div class="container">
     <div class="option amazon">
       <div class="content">
