--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="google-site-verification" content="mwJeO5-7gF_p-HcwBTXdQTldUIjTilRYagTyA51oPGg" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4351253572981801"
      crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4351253572981801"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="container">
