--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
      crossorigin="anonymous"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4351253572981801"
      crossorigin="anonymous"></script>
+  <meta name="google-adsense-account" content="ca-pub-4351253572981801">
 </head>
 <body>
   <div class="container">
