--- a/login.html
+++ b/login.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGIN/SIGNUP</title>
     <link rel="stylesheet" href="login.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4351253572981801"
+     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-4351253572981801">
+
 </head>
 <body>
     <div class="container right-panel-active">
