--- a/withdraw.html
+++ b/withdraw.html
@@ -8,6 +8,9 @@
   <script async custom-element="amp-auto-ads"
         src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
   </script>
+  <meta name="google-adsense-account" content="ca-pub-4351253572981801">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4351253572981801"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <amp-auto-ads type="adsense"
