--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
 </div>
 </div>
   </div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4351253572981801"
+     crossorigin="anonymous"></script>
+<!-- TREASURE TILES -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4351253572981801"
+     data-ad-slot="8555920827"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="183067"></script>
   <script src="script.js"></script>
   </body>
