--- a/about game.html
+++ b/about game.html
@@ -148,11 +148,33 @@
       <ul class="instructions">
         <li>Guess and Flip: Start by selecting a tile to flip. Will it reveal a treasure or remain a mystery?</li>
         <li>Hunt for Rewards: Keep flipping tiles to uncover the three hidden treasures. Trust your instincts and aim for victory!</li>
+	      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4351253572981801"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-4351253572981801"
+     data-ad-slot="6505807712"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
         <li>Redeem Rewards: Once you've collected your treasures, redeem them for exciting gift cards from Amazon and Flipkart.</li>
         <li>Play for More: The more you play, the higher your rewards! Engage with the game and watch your prizes grow.</li>
         <li>Support with Ads: Every game session helps support the game's development through ads. Your gameplay fuels its success.</li>
       </ul>
       <p class="start">Join the adventure in "Treasure Tiles" and let the hunt for rewards begin!</p>
+	    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4351253572981801"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-4351253572981801"
+     data-ad-slot="6505807712"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     </div>
     <button onclick="window.location.href='index.html'" class="back">Back to Game</button>
   </div>
