--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4351253572981801"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-4351253572981801"
+     data-ad-slot="8557255989"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="183067"></script>
   <script src="script.js"></script>
   </body>
