--- a/withdraw.html
+++ b/withdraw.html
@@ -53,6 +53,15 @@
 <div id="container-a05b9c9bfd1d8f828e1902b26e8b12c0"></div>
   <script type='text/javascript' src='//pl23232752.highcpmgate.com/44/a7/fd/44a7fd8c88f1ea4aaf34464336de6b12.js'></script>
   <script type='text/javascript' src='//pl23209233.highcpmgate.com/07/35/9b/07359b3397f7d2a1b964425e5e4d9c22.js'></script>
-  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4351253572981801"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-4351253572981801"
+     data-ad-slot="8557255989"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
