--- a/about game.html
+++ b/about game.html
@@ -214,7 +214,16 @@
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//www.topcreativeformat.com/af238aa002530fed94c4b2bc7dae73b9/invoke.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4351253572981801"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-4351253572981801"
+     data-ad-slot="8557255989"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	<script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="182849"></script>
 
 </body>
