--- a/withdraw.html
+++ b/withdraw.html
@@ -9,13 +9,13 @@
         src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
   </script>
   <meta name="google-adsense-account" content="ca-pub-4351253572981801">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4351253572981801"
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4351253572981801"
      crossorigin="anonymous"></script>
 </head>
 <body>
   <amp-auto-ads type="adsense"
         data-ad-client="ca-pub-4351253572981801">
-</amp-auto-ads>
+  </amp-auto-ads>
   <div class="container">
     <div class="option amazon">
       <div class="content">
@@ -26,18 +26,17 @@
           <button class="sub-option" data-amount="50">Get ₹50 Amazon Gift Card</button>
         </div>
       </div>
-    </div
+    </div>
     <div class="option flipkart">
       <div class="content">
-        <img src="pngwing.com.png
-" alt="Flipkart Logo">
+        <img src="pngwing.com.png" alt="Flipkart Logo">
         <div class="sub-options">
           <button class="sub-option" data-amount="10">Get ₹10 Flipkart Gift Card</button>
           <button class="sub-option" data-amount="25">Get ₹25 Flipkart Gift Card</button>
           <button class="sub-option" data-amount="50">Get ₹50 Flipkart Gift Card</button>
         </div>
       </div>
-    </div
+    </div>
   </div>
   <script>
     document.addEventListener('DOMContentLoaded', function() {
@@ -49,19 +48,19 @@
       });
     });
   </script>
-    <script async="async" data-cfasync="false" src="//pl23209164.highcpmgate.com/a05b9c9bfd1d8f828e1902b26e8b12c0/invoke.js"></script>
-<div id="container-a05b9c9bfd1d8f828e1902b26e8b12c0"></div>
+  <script async="async" data-cfasync="false" src="//pl23209164.highcpmgate.com/a05b9c9bfd1d8f828e1902b26e8b12c0/invoke.js"></script>
+  <div id="container-a05b9c9bfd1d8f828e1902b26e8b12c0"></div>
   <script type='text/javascript' src='//pl23232752.highcpmgate.com/44/a7/fd/44a7fd8c88f1ea4aaf34464336de6b12.js'></script>
   <script type='text/javascript' src='//pl23209233.highcpmgate.com/07/35/9b/07359b3397f7d2a1b964425e5e4d9c22.js'></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4351253572981801"
      crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="autorelaxed"
-     data-ad-client="ca-pub-4351253572981801"
-     data-ad-slot="8557255989"></ins>
-<script>
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-format="autorelaxed"
+       data-ad-client="ca-pub-4351253572981801"
+       data-ad-slot="8557255989"></ins>
+  <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+  </script>
 </body>
 </html>
