--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 </div>
 </div>
   </div>
+    <a id="linkTile" href="https://www.highcpmgate.com/pazsaj4uw?key=96d6b5643981606d838ba9e493e49914" target="_blank">Link Tile</a>
+
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4351253572981801"
      crossorigin="anonymous"></script>
 <!-- TREASURE TILES -->
