--- a/login.html
+++ b/login.html
@@ -11,7 +11,9 @@
     <div class="container right-panel-active">
         <div class="container__form container--signup">
             <form action="#" class="form" id="form1">
-                <h2 class="form__title">Sign Up</h2>
+                <div id="spinner" class="spinner" style="display: none;"></div>
+            <div id="message"></div>
+               <h2 class="form__title">Sign Up</h2>
                 <input type="text" id="username-signup" placeholder="User" class="input" />
                 <input type="email" id="email-signup" placeholder="Email" class="input" />
                 <input type="password" id="password-signup" placeholder="Password" class="input" />
