--- a/about game.html
+++ b/about game.html
@@ -158,13 +158,12 @@
     </div>
     <button onclick="window.location.href='index.html'" class="back">Back to Game</button>
   </div>
-		<script type="module">
-  // Import the functions 
-    
 </body>
 
+	
+<script async="async" data-cfasync="false" src="//pl23209164.highcpmgate.com/a05b9c9bfd1d8f828e1902b26e8b12c0/invoke.js"></script>
 <div id="container-a05b9c9bfd1d8f828e1902b26e8b12c0"></div>
-  <script type='text/javascript' src='//pl23232752.highcpmgate.com/44/a7/fd/44a7fd8c88f1ea4aaf34464336de6b12.js'></script>
+  
   <script type='text/javascript' src='//pl23209233.highcpmgate.com/07/35/9b/07359b3397f7d2a1b964425e5e4d9c22.js'></script>
   <script type="text/javascript">
 	atOptions = {
