--- a/withdraw.html
+++ b/withdraw.html
@@ -11,6 +11,7 @@
   <meta name="google-adsense-account" content="ca-pub-4351253572981801">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4351253572981801"
      crossorigin="anonymous"></script>
+  <script type="module" src="register.js" defer></script>
 </head>
 <body>
   <amp-auto-ads type="adsense"
