--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
     <script>
          (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
-    <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="183067"></script>
+  <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="182849"></script>
     <script src="script.js"></script>
     <script src="INSTRUCTION.JS"></script>
+    <a herf="https://bid.onclckstr.com/vast?spot_id=640334">      </a>
   </div>
 </body>
 </html>
