--- a/index.html
+++ b/index.html
@@ -100,5 +100,15 @@
     <script src="INSTRUCTION.JS"></script>
     <a herf="https://bid.onclckstr.com/vast?spot_id=640334">      </a>
   </div>
+  <footer>
+    <div class="footer-content">
+      <p>Made by Anurag Mittal</p>
+      <div class="social-links">
+        <a href="https://www.instagram.com/yourprofile" target="_blank"><img src="instagram.png" alt="Instagram" class="social-icon"></a>
+        <a href="https://www.facebook.com/yourprofile" target="_blank"><img src="facebook.png" alt="Facebook" class="social-icon"></a>
+        <a href="https://www.twitter.com/yourprofile" target="_blank"><img src="twitter.png" alt="X" class="social-icon"></a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
