--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
     <div class="footer-content">
       <p>Made by Anurag Mittal</p>
       <div class="social-links">
-        <a href="https://www.instagram.com/yourprofile" target="_blank"><img src="instagram.png" alt="Instagram" class="social-icon"></a>
-        <a href="https://www.facebook.com/yourprofile" target="_blank"><img src="facebook.png" alt="Facebook" class="social-icon"></a>
-        <a href="https://www.twitter.com/yourprofile" target="_blank"><img src="twitter.png" alt="X" class="social-icon"></a>
+        <a href="https://www.instagram.com/yourprofile" target="_blank"><img src="pngwing.com (2).png" alt="Instagram" class="social-icon"></a>
+        <a href="https://www.facebook.com/yourprofile" target="_blank"><img src="pngwing.com (3).png" alt="Facebook" class="social-icon"></a>
+        <a href="https://www.twitter.com/yourprofile" target="_blank"><img src="pngwing.com (4).png" alt="X" class="social-icon"></a>
       </div>
     </div>
   </footer>
